xsm_expl/Stages/6/Frontend/y.output
   0  $accept : start $end

   1  start : TypeDefBlock GDeclBlock FDefBlock MainBlock
   2        | TypeDefBlock GDeclBlock MainBlock
   3        | TypeDefBlock GDeclBlock

   4  TypeDefBlock : TYPE TypeDefList ENDTYPE
   5               |

   6  TypeDefList : TypeDefList TypeDef
   7              | TypeDef

   8  TypeDef : TypeID '{' FieldDeclList '}'

   9  TypeID : ID

  10  FieldDeclList : FieldDeclList FieldDecl
  11                | FieldDecl

  12  FieldDecl : TypeName ID ';'

  13  TypeName : INT
  14           | STR
  15           | ID

  16  Slist : Slist Stmt ';'
  17        | Stmt ';'

  18  Stmt : inputStmt
  19       | outputStmt
  20       | assignStmt
  21       | ifStmt
  22       | whileStmt
  23       | doWhileStmt
  24       | breakStmt
  25       | continueStmt
  26       | breakPointStmt
  27       | DynamicMemStmt

  28  inputStmt : READ expr

  29  outputStmt : WRITE expr

  30  assignStmt : ID EQUAL expr
  31             | ID '[' expr ']' EQUAL expr
  32             | MUL ID EQUAL expr
  33             | StructField EQUAL expr

  34  retVal : expr

  35  retStmt : RETURN retVal ';'

  36  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  37         | IF expr THEN Slist ENDIF

  38  whileStmt : WHILE expr DO Slist ENDWHILE

  39  doWhileStmt : DO Slist WHILE expr ENDWHILE

  40  breakStmt : BREAK

  41  continueStmt : CONTINUE

  42  breakPointStmt : BREAKPOINT

  43  GDeclBlock : DECL GDeclList ENDDECL
  44             | DECL ENDDECL

  45  GDeclList : GDeclList GDecl
  46            | GDecl

  47  GDecl : GType GIDList ';'

  48  GType : INT
  49        | STR
  50        | ID

  51  GIDList : GIDList ',' GID
  52          | GID

  53  GID : ID
  54      | ID '[' NUM ']'
  55      | ID '(' ParamList ')'
  56      | GPtrID
  57      | GPtrID '(' ParamList ')'

  58  GPtrID : MUL ID

  59  ParamList : ParamList ',' Param
  60            | Param
  61            |

  62  Param : ParamType ID

  63  ParamType : INT
  64            | STR
  65            | INT MUL
  66            | STR MUL
  67            | ID

  68  ArgList : ArgList ',' Arg
  69          | Arg
  70          |

  71  Arg : expr

  72  FDefBlock : FDefBlock FDef
  73            | FDef

  74  FID : ID

  75  FDef : FuncSign '{' LDeclBlock FBody '}'

  76  FuncSign : FuncType FID '(' ParamList ')'

  77  FuncType : INT
  78           | STR
  79           | INT MUL
  80           | STR MUL
  81           | ID

  82  FBody : BEGIN_ Slist retStmt END ';'

  83  LDeclBlock : DECL LDeclList ENDDECL
  84             |
  85             | DECL ENDDECL

  86  LDeclList : LDeclList LDecl
  87            | LDecl

  88  LDecl : LType LIDList ';'

  89  LType : INT
  90        | STR
  91        | ID

  92  LIDList : LIDList ',' LID
  93          | LID

  94  LID : ID
  95      | MUL ID

  96  MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody '}'

  97  MainFunc : INT MAIN

  98  MBody : BEGIN_ Slist retStmt END ';'

  99  DynamicMemStmt : AllocStmt
 100                 | FreeStmt
 101                 | InitializeStmt

 102  AllocStmt : ID EQUAL ALLOC '(' ')'

 103  FreeStmt : ID EQUAL FREE '(' expr ')'

 104  InitializeStmt : ID EQUAL INITIALIZE '(' ')'

 105  StructField : StructField '.' ID
 106              | ID '.' ID

 107  expr : expr PLUS expr
 108       | expr MINUS expr
 109       | expr MUL expr
 110       | expr DIV expr
 111       | expr MOD expr
 112       | expr EQ expr
 113       | expr NEQ expr
 114       | expr LT expr
 115       | expr LTE expr
 116       | expr GT expr
 117       | expr GTE expr
 118       | expr AND expr
 119       | expr OR expr
 120       | NOT expr
 121       | '(' expr ')'
 122       | StructField
 123       | ID '(' ArgList ')'
 124       | ID '[' expr ']'
 125       | AMPERSAND ID
 126       | MUL ID
 127       | ID
 128       | NUM
 129       | STRING
 130       | NULL_

state 0
	$accept : . start $end  (0)
	TypeDefBlock : .  (5)

	TYPE  shift 1
	DECL  reduce 5

	start  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (4)

	ID  shift 4
	.  error

	TypeID  goto 5
	TypeDefList  goto 6
	TypeDef  goto 7


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : TypeDefBlock . GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock . GDeclBlock MainBlock  (2)
	start : TypeDefBlock . GDeclBlock  (3)

	DECL  shift 8
	.  error

	GDeclBlock  goto 9


state 4
	TypeID : ID .  (9)

	.  reduce 9


state 5
	TypeDef : TypeID . '{' FieldDeclList '}'  (8)

	'{'  shift 10
	.  error


state 6
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (4)
	TypeDefList : TypeDefList . TypeDef  (6)

	ID  shift 4
	ENDTYPE  shift 11
	.  error

	TypeID  goto 5
	TypeDef  goto 12


state 7
	TypeDefList : TypeDef .  (7)

	.  reduce 7


state 8
	GDeclBlock : DECL . GDeclList ENDDECL  (43)
	GDeclBlock : DECL . ENDDECL  (44)

	ID  shift 13
	ENDDECL  shift 14
	INT  shift 15
	STR  shift 16
	.  error

	GType  goto 17
	GDeclList  goto 18
	GDecl  goto 19


state 9
	start : TypeDefBlock GDeclBlock . FDefBlock MainBlock  (1)
	start : TypeDefBlock GDeclBlock . MainBlock  (2)
	start : TypeDefBlock GDeclBlock .  (3)

	ID  shift 20
	INT  shift 21
	STR  shift 22
	$end  reduce 3

	FDefBlock  goto 23
	MainBlock  goto 24
	FDef  goto 25
	FuncSign  goto 26
	FuncType  goto 27
	MainFunc  goto 28


state 10
	TypeDef : TypeID '{' . FieldDeclList '}'  (8)

	ID  shift 29
	INT  shift 30
	STR  shift 31
	.  error

	TypeName  goto 32
	FieldDecl  goto 33
	FieldDeclList  goto 34


state 11
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (4)

	.  reduce 4


state 12
	TypeDefList : TypeDefList TypeDef .  (6)

	.  reduce 6


state 13
	GType : ID .  (50)

	.  reduce 50


state 14
	GDeclBlock : DECL ENDDECL .  (44)

	.  reduce 44


state 15
	GType : INT .  (48)

	.  reduce 48


state 16
	GType : STR .  (49)

	.  reduce 49


state 17
	GDecl : GType . GIDList ';'  (47)

	ID  shift 35
	MUL  shift 36
	.  error

	GPtrID  goto 37
	GIDList  goto 38
	GID  goto 39


state 18
	GDeclBlock : DECL GDeclList . ENDDECL  (43)
	GDeclList : GDeclList . GDecl  (45)

	ID  shift 13
	ENDDECL  shift 40
	INT  shift 15
	STR  shift 16
	.  error

	GType  goto 17
	GDecl  goto 41


state 19
	GDeclList : GDecl .  (46)

	.  reduce 46


state 20
	FuncType : ID .  (81)

	.  reduce 81


state 21
	FuncType : INT .  (77)
	FuncType : INT . MUL  (79)
	MainFunc : INT . MAIN  (97)

	MAIN  shift 42
	MUL  shift 43
	ID  reduce 77


state 22
	FuncType : STR .  (78)
	FuncType : STR . MUL  (80)

	MUL  shift 44
	ID  reduce 78


state 23
	start : TypeDefBlock GDeclBlock FDefBlock . MainBlock  (1)
	FDefBlock : FDefBlock . FDef  (72)

	ID  shift 20
	INT  shift 21
	STR  shift 22
	.  error

	MainBlock  goto 45
	FDef  goto 46
	FuncSign  goto 26
	FuncType  goto 27
	MainFunc  goto 28


state 24
	start : TypeDefBlock GDeclBlock MainBlock .  (2)

	.  reduce 2


state 25
	FDefBlock : FDef .  (73)

	.  reduce 73


state 26
	FDef : FuncSign . '{' LDeclBlock FBody '}'  (75)

	'{'  shift 47
	.  error


state 27
	FuncSign : FuncType . FID '(' ParamList ')'  (76)

	ID  shift 48
	.  error

	FID  goto 49


state 28
	MainBlock : MainFunc . '(' ')' '{' LDeclBlock MBody '}'  (96)

	'('  shift 50
	.  error


state 29
	TypeName : ID .  (15)

	.  reduce 15


state 30
	TypeName : INT .  (13)

	.  reduce 13


state 31
	TypeName : STR .  (14)

	.  reduce 14


state 32
	FieldDecl : TypeName . ID ';'  (12)

	ID  shift 51
	.  error


state 33
	FieldDeclList : FieldDecl .  (11)

	.  reduce 11


state 34
	TypeDef : TypeID '{' FieldDeclList . '}'  (8)
	FieldDeclList : FieldDeclList . FieldDecl  (10)

	ID  shift 29
	INT  shift 30
	STR  shift 31
	'}'  shift 52
	.  error

	TypeName  goto 32
	FieldDecl  goto 53


state 35
	GID : ID .  (53)
	GID : ID . '[' NUM ']'  (54)
	GID : ID . '(' ParamList ')'  (55)

	'['  shift 54
	'('  shift 55
	';'  reduce 53
	','  reduce 53


state 36
	GPtrID : MUL . ID  (58)

	ID  shift 56
	.  error


state 37
	GID : GPtrID .  (56)
	GID : GPtrID . '(' ParamList ')'  (57)

	'('  shift 57
	';'  reduce 56
	','  reduce 56


state 38
	GDecl : GType GIDList . ';'  (47)
	GIDList : GIDList . ',' GID  (51)

	';'  shift 58
	','  shift 59
	.  error


state 39
	GIDList : GID .  (52)

	.  reduce 52


state 40
	GDeclBlock : DECL GDeclList ENDDECL .  (43)

	.  reduce 43


state 41
	GDeclList : GDeclList GDecl .  (45)

	.  reduce 45


state 42
	MainFunc : INT MAIN .  (97)

	.  reduce 97


state 43
	FuncType : INT MUL .  (79)

	.  reduce 79


state 44
	FuncType : STR MUL .  (80)

	.  reduce 80


state 45
	start : TypeDefBlock GDeclBlock FDefBlock MainBlock .  (1)

	.  reduce 1


state 46
	FDefBlock : FDefBlock FDef .  (72)

	.  reduce 72


state 47
	FDef : FuncSign '{' . LDeclBlock FBody '}'  (75)
	LDeclBlock : .  (84)

	DECL  shift 60
	BEGIN_  reduce 84

	LDeclBlock  goto 61


state 48
	FID : ID .  (74)

	.  reduce 74


state 49
	FuncSign : FuncType FID . '(' ParamList ')'  (76)

	'('  shift 62
	.  error


state 50
	MainBlock : MainFunc '(' . ')' '{' LDeclBlock MBody '}'  (96)

	')'  shift 63
	.  error


state 51
	FieldDecl : TypeName ID . ';'  (12)

	';'  shift 64
	.  error


state 52
	TypeDef : TypeID '{' FieldDeclList '}' .  (8)

	.  reduce 8


state 53
	FieldDeclList : FieldDeclList FieldDecl .  (10)

	.  reduce 10


state 54
	GID : ID '[' . NUM ']'  (54)

	NUM  shift 65
	.  error


state 55
	GID : ID '(' . ParamList ')'  (55)
	ParamList : .  (61)

	ID  shift 66
	INT  shift 67
	STR  shift 68
	','  reduce 61
	')'  reduce 61

	ParamList  goto 69
	Param  goto 70
	ParamType  goto 71


state 56
	GPtrID : MUL ID .  (58)

	.  reduce 58


state 57
	GID : GPtrID '(' . ParamList ')'  (57)
	ParamList : .  (61)

	ID  shift 66
	INT  shift 67
	STR  shift 68
	','  reduce 61
	')'  reduce 61

	ParamList  goto 72
	Param  goto 70
	ParamType  goto 71


state 58
	GDecl : GType GIDList ';' .  (47)

	.  reduce 47


state 59
	GIDList : GIDList ',' . GID  (51)

	ID  shift 35
	MUL  shift 36
	.  error

	GPtrID  goto 37
	GID  goto 73


state 60
	LDeclBlock : DECL . LDeclList ENDDECL  (83)
	LDeclBlock : DECL . ENDDECL  (85)

	ID  shift 74
	ENDDECL  shift 75
	INT  shift 76
	STR  shift 77
	.  error

	LDeclList  goto 78
	LDecl  goto 79
	LType  goto 80


state 61
	FDef : FuncSign '{' LDeclBlock . FBody '}'  (75)

	BEGIN_  shift 81
	.  error

	FBody  goto 82


state 62
	FuncSign : FuncType FID '(' . ParamList ')'  (76)
	ParamList : .  (61)

	ID  shift 66
	INT  shift 67
	STR  shift 68
	','  reduce 61
	')'  reduce 61

	ParamList  goto 83
	Param  goto 70
	ParamType  goto 71


state 63
	MainBlock : MainFunc '(' ')' . '{' LDeclBlock MBody '}'  (96)

	'{'  shift 84
	.  error


state 64
	FieldDecl : TypeName ID ';' .  (12)

	.  reduce 12


state 65
	GID : ID '[' NUM . ']'  (54)

	']'  shift 85
	.  error


state 66
	ParamType : ID .  (67)

	.  reduce 67


state 67
	ParamType : INT .  (63)
	ParamType : INT . MUL  (65)

	MUL  shift 86
	ID  reduce 63


state 68
	ParamType : STR .  (64)
	ParamType : STR . MUL  (66)

	MUL  shift 87
	ID  reduce 64


state 69
	GID : ID '(' ParamList . ')'  (55)
	ParamList : ParamList . ',' Param  (59)

	','  shift 88
	')'  shift 89
	.  error


state 70
	ParamList : Param .  (60)

	.  reduce 60


state 71
	Param : ParamType . ID  (62)

	ID  shift 90
	.  error


state 72
	GID : GPtrID '(' ParamList . ')'  (57)
	ParamList : ParamList . ',' Param  (59)

	','  shift 88
	')'  shift 91
	.  error


state 73
	GIDList : GIDList ',' GID .  (51)

	.  reduce 51


state 74
	LType : ID .  (91)

	.  reduce 91


state 75
	LDeclBlock : DECL ENDDECL .  (85)

	.  reduce 85


state 76
	LType : INT .  (89)

	.  reduce 89


state 77
	LType : STR .  (90)

	.  reduce 90


state 78
	LDeclBlock : DECL LDeclList . ENDDECL  (83)
	LDeclList : LDeclList . LDecl  (86)

	ID  shift 74
	ENDDECL  shift 92
	INT  shift 76
	STR  shift 77
	.  error

	LDecl  goto 93
	LType  goto 80


state 79
	LDeclList : LDecl .  (87)

	.  reduce 87


state 80
	LDecl : LType . LIDList ';'  (88)

	ID  shift 94
	MUL  shift 95
	.  error

	LIDList  goto 96
	LID  goto 97


state 81
	FBody : BEGIN_ . Slist retStmt END ';'  (82)

	ID  shift 98
	READ  shift 99
	WRITE  shift 100
	MUL  shift 101
	BREAKPOINT  shift 102
	IF  shift 103
	WHILE  shift 104
	DO  shift 105
	BREAK  shift 106
	CONTINUE  shift 107
	.  error

	Slist  goto 108
	Stmt  goto 109
	inputStmt  goto 110
	outputStmt  goto 111
	assignStmt  goto 112
	ifStmt  goto 113
	whileStmt  goto 114
	doWhileStmt  goto 115
	breakStmt  goto 116
	continueStmt  goto 117
	breakPointStmt  goto 118
	StructField  goto 119
	InitializeStmt  goto 120
	AllocStmt  goto 121
	FreeStmt  goto 122
	DynamicMemStmt  goto 123


state 82
	FDef : FuncSign '{' LDeclBlock FBody . '}'  (75)

	'}'  shift 124
	.  error


state 83
	ParamList : ParamList . ',' Param  (59)
	FuncSign : FuncType FID '(' ParamList . ')'  (76)

	','  shift 88
	')'  shift 125
	.  error


state 84
	MainBlock : MainFunc '(' ')' '{' . LDeclBlock MBody '}'  (96)
	LDeclBlock : .  (84)

	DECL  shift 60
	BEGIN_  reduce 84

	LDeclBlock  goto 126


state 85
	GID : ID '[' NUM ']' .  (54)

	.  reduce 54


state 86
	ParamType : INT MUL .  (65)

	.  reduce 65


state 87
	ParamType : STR MUL .  (66)

	.  reduce 66


state 88
	ParamList : ParamList ',' . Param  (59)

	ID  shift 66
	INT  shift 67
	STR  shift 68
	.  error

	Param  goto 127
	ParamType  goto 71


state 89
	GID : ID '(' ParamList ')' .  (55)

	.  reduce 55


state 90
	Param : ParamType ID .  (62)

	.  reduce 62


state 91
	GID : GPtrID '(' ParamList ')' .  (57)

	.  reduce 57


state 92
	LDeclBlock : DECL LDeclList ENDDECL .  (83)

	.  reduce 83


state 93
	LDeclList : LDeclList LDecl .  (86)

	.  reduce 86


state 94
	LID : ID .  (94)

	.  reduce 94


state 95
	LID : MUL . ID  (95)

	ID  shift 128
	.  error


state 96
	LDecl : LType LIDList . ';'  (88)
	LIDList : LIDList . ',' LID  (92)

	';'  shift 129
	','  shift 130
	.  error


state 97
	LIDList : LID .  (93)

	.  reduce 93


state 98
	assignStmt : ID . EQUAL expr  (30)
	assignStmt : ID . '[' expr ']' EQUAL expr  (31)
	AllocStmt : ID . EQUAL ALLOC '(' ')'  (102)
	FreeStmt : ID . EQUAL FREE '(' expr ')'  (103)
	InitializeStmt : ID . EQUAL INITIALIZE '(' ')'  (104)
	StructField : ID . '.' ID  (106)

	EQUAL  shift 131
	'['  shift 132
	'.'  shift 133
	.  error


state 99
	inputStmt : READ . expr  (28)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 142
	StructField  goto 143


state 100
	outputStmt : WRITE . expr  (29)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 144
	StructField  goto 143


state 101
	assignStmt : MUL . ID EQUAL expr  (32)

	ID  shift 145
	.  error


state 102
	breakPointStmt : BREAKPOINT .  (42)

	.  reduce 42


state 103
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (36)
	ifStmt : IF . expr THEN Slist ENDIF  (37)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 146
	StructField  goto 143


state 104
	whileStmt : WHILE . expr DO Slist ENDWHILE  (38)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 147
	StructField  goto 143


state 105
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (39)

	ID  shift 98
	READ  shift 99
	WRITE  shift 100
	MUL  shift 101
	BREAKPOINT  shift 102
	IF  shift 103
	WHILE  shift 104
	DO  shift 105
	BREAK  shift 106
	CONTINUE  shift 107
	.  error

	Slist  goto 148
	Stmt  goto 109
	inputStmt  goto 110
	outputStmt  goto 111
	assignStmt  goto 112
	ifStmt  goto 113
	whileStmt  goto 114
	doWhileStmt  goto 115
	breakStmt  goto 116
	continueStmt  goto 117
	breakPointStmt  goto 118
	StructField  goto 119
	InitializeStmt  goto 120
	AllocStmt  goto 121
	FreeStmt  goto 122
	DynamicMemStmt  goto 123


state 106
	breakStmt : BREAK .  (40)

	.  reduce 40


state 107
	continueStmt : CONTINUE .  (41)

	.  reduce 41


state 108
	Slist : Slist . Stmt ';'  (16)
	FBody : BEGIN_ Slist . retStmt END ';'  (82)

	ID  shift 98
	READ  shift 99
	WRITE  shift 100
	MUL  shift 101
	BREAKPOINT  shift 102
	IF  shift 103
	WHILE  shift 104
	DO  shift 105
	BREAK  shift 106
	CONTINUE  shift 107
	RETURN  shift 149
	.  error

	Stmt  goto 150
	inputStmt  goto 110
	outputStmt  goto 111
	assignStmt  goto 112
	ifStmt  goto 113
	whileStmt  goto 114
	doWhileStmt  goto 115
	breakStmt  goto 116
	continueStmt  goto 117
	breakPointStmt  goto 118
	retStmt  goto 151
	StructField  goto 119
	InitializeStmt  goto 120
	AllocStmt  goto 121
	FreeStmt  goto 122
	DynamicMemStmt  goto 123


state 109
	Slist : Stmt . ';'  (17)

	';'  shift 152
	.  error


state 110
	Stmt : inputStmt .  (18)

	.  reduce 18


state 111
	Stmt : outputStmt .  (19)

	.  reduce 19


state 112
	Stmt : assignStmt .  (20)

	.  reduce 20


state 113
	Stmt : ifStmt .  (21)

	.  reduce 21


state 114
	Stmt : whileStmt .  (22)

	.  reduce 22


state 115
	Stmt : doWhileStmt .  (23)

	.  reduce 23


state 116
	Stmt : breakStmt .  (24)

	.  reduce 24


state 117
	Stmt : continueStmt .  (25)

	.  reduce 25


state 118
	Stmt : breakPointStmt .  (26)

	.  reduce 26


state 119
	assignStmt : StructField . EQUAL expr  (33)
	StructField : StructField . '.' ID  (105)

	EQUAL  shift 153
	'.'  shift 154
	.  error


state 120
	DynamicMemStmt : InitializeStmt .  (101)

	.  reduce 101


state 121
	DynamicMemStmt : AllocStmt .  (99)

	.  reduce 99


state 122
	DynamicMemStmt : FreeStmt .  (100)

	.  reduce 100


state 123
	Stmt : DynamicMemStmt .  (27)

	.  reduce 27


state 124
	FDef : FuncSign '{' LDeclBlock FBody '}' .  (75)

	.  reduce 75


state 125
	FuncSign : FuncType FID '(' ParamList ')' .  (76)

	.  reduce 76


state 126
	MainBlock : MainFunc '(' ')' '{' LDeclBlock . MBody '}'  (96)

	BEGIN_  shift 155
	.  error

	MBody  goto 156


state 127
	ParamList : ParamList ',' Param .  (59)

	.  reduce 59


state 128
	LID : MUL ID .  (95)

	.  reduce 95


state 129
	LDecl : LType LIDList ';' .  (88)

	.  reduce 88


state 130
	LIDList : LIDList ',' . LID  (92)

	ID  shift 94
	MUL  shift 95
	.  error

	LID  goto 157


state 131
	assignStmt : ID EQUAL . expr  (30)
	AllocStmt : ID EQUAL . ALLOC '(' ')'  (102)
	FreeStmt : ID EQUAL . FREE '(' expr ')'  (103)
	InitializeStmt : ID EQUAL . INITIALIZE '(' ')'  (104)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	INITIALIZE  shift 158
	ALLOC  shift 159
	FREE  shift 160
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 161
	StructField  goto 143


state 132
	assignStmt : ID '[' . expr ']' EQUAL expr  (31)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 162
	StructField  goto 143


state 133
	StructField : ID '.' . ID  (106)

	ID  shift 163
	.  error


state 134
	StructField : ID . '.' ID  (106)
	expr : ID . '(' ArgList ')'  (123)
	expr : ID . '[' expr ']'  (124)
	expr : ID .  (127)

	'['  shift 164
	'('  shift 165
	'.'  shift 133
	PLUS  reduce 127
	MINUS  reduce 127
	MUL  reduce 127
	DIV  reduce 127
	MOD  reduce 127
	THEN  reduce 127
	DO  reduce 127
	ENDWHILE  reduce 127
	AND  reduce 127
	OR  reduce 127
	EQ  reduce 127
	NEQ  reduce 127
	LT  reduce 127
	LTE  reduce 127
	GT  reduce 127
	GTE  reduce 127
	';'  reduce 127
	']'  reduce 127
	','  reduce 127
	')'  reduce 127


state 135
	expr : NUM .  (128)

	.  reduce 128


state 136
	expr : STRING .  (129)

	.  reduce 129


state 137
	expr : NULL_ .  (130)

	.  reduce 130


state 138
	expr : MUL . ID  (126)

	ID  shift 166
	.  error


state 139
	expr : AMPERSAND . ID  (125)

	ID  shift 167
	.  error


state 140
	expr : NOT . expr  (120)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 168
	StructField  goto 143


state 141
	expr : '(' . expr ')'  (121)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 169
	StructField  goto 143


state 142
	inputStmt : READ expr .  (28)
	expr : expr . PLUS expr  (107)
	expr : expr . MINUS expr  (108)
	expr : expr . MUL expr  (109)
	expr : expr . DIV expr  (110)
	expr : expr . MOD expr  (111)
	expr : expr . EQ expr  (112)
	expr : expr . NEQ expr  (113)
	expr : expr . LT expr  (114)
	expr : expr . LTE expr  (115)
	expr : expr . GT expr  (116)
	expr : expr . GTE expr  (117)
	expr : expr . AND expr  (118)
	expr : expr . OR expr  (119)

	PLUS  shift 170
	MINUS  shift 171
	MUL  shift 172
	DIV  shift 173
	MOD  shift 174
	AND  shift 175
	OR  shift 176
	EQ  shift 177
	NEQ  shift 178
	LT  shift 179
	LTE  shift 180
	GT  shift 181
	GTE  shift 182
	';'  reduce 28


state 143
	StructField : StructField . '.' ID  (105)
	expr : StructField .  (122)

	'.'  shift 154
	PLUS  reduce 122
	MINUS  reduce 122
	MUL  reduce 122
	DIV  reduce 122
	MOD  reduce 122
	THEN  reduce 122
	DO  reduce 122
	ENDWHILE  reduce 122
	AND  reduce 122
	OR  reduce 122
	EQ  reduce 122
	NEQ  reduce 122
	LT  reduce 122
	LTE  reduce 122
	GT  reduce 122
	GTE  reduce 122
	';'  reduce 122
	']'  reduce 122
	','  reduce 122
	')'  reduce 122


state 144
	outputStmt : WRITE expr .  (29)
	expr : expr . PLUS expr  (107)
	expr : expr . MINUS expr  (108)
	expr : expr . MUL expr  (109)
	expr : expr . DIV expr  (110)
	expr : expr . MOD expr  (111)
	expr : expr . EQ expr  (112)
	expr : expr . NEQ expr  (113)
	expr : expr . LT expr  (114)
	expr : expr . LTE expr  (115)
	expr : expr . GT expr  (116)
	expr : expr . GTE expr  (117)
	expr : expr . AND expr  (118)
	expr : expr . OR expr  (119)

	PLUS  shift 170
	MINUS  shift 171
	MUL  shift 172
	DIV  shift 173
	MOD  shift 174
	AND  shift 175
	OR  shift 176
	EQ  shift 177
	NEQ  shift 178
	LT  shift 179
	LTE  shift 180
	GT  shift 181
	GTE  shift 182
	';'  reduce 29


state 145
	assignStmt : MUL ID . EQUAL expr  (32)

	EQUAL  shift 183
	.  error


state 146
	ifStmt : IF expr . THEN Slist ELSE Slist ENDIF  (36)
	ifStmt : IF expr . THEN Slist ENDIF  (37)
	expr : expr . PLUS expr  (107)
	expr : expr . MINUS expr  (108)
	expr : expr . MUL expr  (109)
	expr : expr . DIV expr  (110)
	expr : expr . MOD expr  (111)
	expr : expr . EQ expr  (112)
	expr : expr . NEQ expr  (113)
	expr : expr . LT expr  (114)
	expr : expr . LTE expr  (115)
	expr : expr . GT expr  (116)
	expr : expr . GTE expr  (117)
	expr : expr . AND expr  (118)
	expr : expr . OR expr  (119)

	PLUS  shift 170
	MINUS  shift 171
	MUL  shift 172
	DIV  shift 173
	MOD  shift 174
	THEN  shift 184
	AND  shift 175
	OR  shift 176
	EQ  shift 177
	NEQ  shift 178
	LT  shift 179
	LTE  shift 180
	GT  shift 181
	GTE  shift 182
	.  error


state 147
	whileStmt : WHILE expr . DO Slist ENDWHILE  (38)
	expr : expr . PLUS expr  (107)
	expr : expr . MINUS expr  (108)
	expr : expr . MUL expr  (109)
	expr : expr . DIV expr  (110)
	expr : expr . MOD expr  (111)
	expr : expr . EQ expr  (112)
	expr : expr . NEQ expr  (113)
	expr : expr . LT expr  (114)
	expr : expr . LTE expr  (115)
	expr : expr . GT expr  (116)
	expr : expr . GTE expr  (117)
	expr : expr . AND expr  (118)
	expr : expr . OR expr  (119)

	PLUS  shift 170
	MINUS  shift 171
	MUL  shift 172
	DIV  shift 173
	MOD  shift 174
	DO  shift 185
	AND  shift 175
	OR  shift 176
	EQ  shift 177
	NEQ  shift 178
	LT  shift 179
	LTE  shift 180
	GT  shift 181
	GTE  shift 182
	.  error


state 148
	Slist : Slist . Stmt ';'  (16)
	doWhileStmt : DO Slist . WHILE expr ENDWHILE  (39)

	ID  shift 98
	READ  shift 99
	WRITE  shift 100
	MUL  shift 101
	BREAKPOINT  shift 102
	IF  shift 103
	WHILE  shift 186
	DO  shift 105
	BREAK  shift 106
	CONTINUE  shift 107
	.  error

	Stmt  goto 150
	inputStmt  goto 110
	outputStmt  goto 111
	assignStmt  goto 112
	ifStmt  goto 113
	whileStmt  goto 114
	doWhileStmt  goto 115
	breakStmt  goto 116
	continueStmt  goto 117
	breakPointStmt  goto 118
	StructField  goto 119
	InitializeStmt  goto 120
	AllocStmt  goto 121
	FreeStmt  goto 122
	DynamicMemStmt  goto 123


state 149
	retStmt : RETURN . retVal ';'  (35)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 187
	retVal  goto 188
	StructField  goto 143


state 150
	Slist : Slist Stmt . ';'  (16)

	';'  shift 189
	.  error


state 151
	FBody : BEGIN_ Slist retStmt . END ';'  (82)

	END  shift 190
	.  error


state 152
	Slist : Stmt ';' .  (17)

	.  reduce 17


state 153
	assignStmt : StructField EQUAL . expr  (33)

	ID  shift 134
	NUM  shift 135
	STRING  shift 136
	NULL_  shift 137
	MUL  shift 138
	AMPERSAND  shift 139
	NOT  shift 140
	'('  shift 141
	.  error

	expr  goto 191
	StructField  goto 143


state 154
	StructField : StructField '.' . ID  (105)

	ID  shift 192
	.  error


state 155
	MBody : BEGIN_ . Slist retStmt END ';'  (98)

	ID  shift 98
	READ  shift 99
	WRITE  shift 100
	MUL  shift 101
	BREAKPOINT  shift 102
	IF  shift 103
	WHILE  shift 104
	DO  shift 105
	BREAK  shift 106
	CONTINUE  shift 107
	.  error

	Slist  goto 193
	Stmt  goto 109
	inputStmt  goto 110
	outputStmt  goto 111
	assignStmt  goto 112
	ifStmt  goto 113
	whileStmt  goto 114
	doWhileStmt  goto 115
	breakStmt  goto 116
	continueStmt  goto 117
	breakPointStmt  goto 118
	StructField  goto 119
	InitializeStmt  goto 120
	AllocStmt  goto 121
	FreeStmt  goto 122
	DynamicMemStmt  goto 123


state 156
	MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody . '}'  (96)

	'}'  shift 194
	.  error


state 157
	LIDList : LIDList ',' LID .  (92)

	.  reduce 92


state 158
	InitializeStmt : ID EQUAL INITIALIZE . '(' ')'  (104)

	'('  shift 195
	.  error


state 159
	AllocStmt : ID EQUAL ALLOC . '(' ')'  (102)

	'('  shift 196
	.  error


state 160
	FreeStmt : ID EQUAL FREE . '(' expr ')'  (103)

	'('  shift 197
	.  error

